pydio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pydio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pydio
  template:
    metadata:
      labels:
        app: pydio
    spec:
      containers:
      - name: pydio
        image: pydio/cells
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /data/cells
          name: pydio-storage
      volumes:
      - name: pydio-storage
        persistentVolumeClaim:
          claimName: pydio-pvc
