pydio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pydio-service
spec:
  selector:
    app: pydio
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
