pydio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pydio-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: drive.pmh.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pydio-service
            port:
              number: 8080
